ODP-2431: Added druid yarn infra-solr env files.